--- a/INST377_final/package.json
+++ b/INST377_final/package.json
@@ -1,9 +1,13 @@
 {
   "name": "inst377_final",
   "version": "1.0.0",
+  "engine":{
+    "node": "20.x"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
